--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>React App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+/>
+
+    
+  <!-- <a href='https://pl.freepik.com/wektory/logo'>Logo plik wektorowy utworzone przez vectortwins - pl.freepik.com</a> -->
   </head>
   <body>
-    
     <div id="root"></div>
   </body>
 </html>
